--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,10 +5,7 @@ permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
-
+<div class="wordwrap">You can also find the list of articles on <a href="https://scholar.google.com/citations?user=9EyT1mYAAAAJ">Google Scholar</a>.</div>
 {% include base_path %}
 
 <!-- New style rendering if publication categories are defined -->
