--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -5,29 +5,55 @@ permalink: /publications/
 author_profile: true
 ---
 
-<div class="wordwrap">You can also find the list of articles on <a href="https://scholar.google.com/citations?user=9EyT1mYAAAAJ">Google Scholar</a>.</div>
+<div class="wordwrap">You can also find the list of articles on <a
+    href="https://scholar.google.com/citations?user=9EyT1mYAAAAJ">Google Scholar</a>.</div>
 {% include base_path %}
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
+<ul>
+{% for category in site.publication_category %}
+{% assign post_count = 0 %}
+{% for post in site.publications reversed %}
+{% if post.category != category[0] %}
+  {% continue %}
+{% endif %}
+{% assign post_count = post_count | plus: 1 %}
+{% endfor %}
+<li><a href = "#{{ category[0] }}">{{ category[1].title }} ({{ post_count }})</a></li>
+
+{% endfor %}
+</ul>
+
+{% include group-by-array collection=site.publications field="year" %}
+{% assign years = group_names | sort %}
+
   {% for category in site.publication_category  %}
     {% assign title_shown = false %}
+    {% for year in years reversed %}
+    {% assign title_shown2 = false %}
+
     {% for post in site.publications reversed %}
       {% if post.category != category[0] %}
         {% continue %}
       {% endif %}
       {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
+        <h2 id="{{ category[0] }}">{{ category[1].title }}</h2><hr />
         {% assign title_shown = true %}
       {% endunless %}
-      {% include archive-single.html %}
+
+
+      {% capture post_year %}{{ post.date | date: '%Y' }}{% endcapture %}
+      {% if post_year == year %}
+        {% unless title_shown2 %}
+        <!-- show year only if category is not books -->
+        {% if category[0] != "book" %}
+        <h3>{{ year }}</h3>
+        {% endif %}
+        
+          {% assign title_shown2 = true %}
+        {% endunless %}
+        {% include archive-publications.html %}
+       
+      {% endif %}
     {% endfor %}
   {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
-
-
-
+{% endfor %}
