--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -8,6 +8,13 @@ redirect_from:
 ---
 
 {% include base_path %}
+
+<ul style="font-size: 0.8em"> 
+{% for post in site.posts %}
+<li>{{ post.date | date: '%Y-%m' }}: <b>{{ post.title }}</b></li>
+{% endfor %}
+</ul>
+
 {% capture written_year %}'None'{% endcapture %}
 {% for post in site.posts %}
   {% capture year %}{{ post.date | date: '%Y' }}{% endcapture %}
