--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -11,7 +11,7 @@ redirect_from:
 
 <ul style="font-size: 0.8em"> 
 {% for post in site.posts %}
-<li>{{ post.date | date: '%Y-%m' }}: <b>{{ post.title }}</b></li>
+<li>{{ post.date | date: '%Y-%m' }}: <a href= {{post.url}}><b>{{ post.title }}</b></a></li>
 {% endfor %}
 </ul>
 
